fix: 更新部署配置和生成器代码

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="welcome-section">
                     <h2>Hello,</h2>
                     <h3>Welcome to My Navigation</h3>
-                    <p class="subtitle">Front-end Developer / Open Source Enthusiast / Blogger</p>
+                    <p class="subtitle">导航菜单</p>
                 </div>
 
                 <section class="category">
@@ -139,7 +139,7 @@
                             <p>基于Vue3的待办事项管理器</p>
                         </a>
 
-                        <a href="https://blog.rzlnb.top/" class="site-card">
+                        <a href="#" class="site-card">
                             <i class="fas fa-blog"></i>
                             <h3>个人博客</h3>
                             <p>使用Hexo搭建的技术博客</p>
