--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                     <i class="fas fa-external-link-alt external-icon"></i>
                 </a>
             </div>
+
+            <div class="copyright">
+                <p>© 2024 <a href="https://github.com/RZLNB/menav" target="_blank">MeNav</a></p>
+                <p>by <a href="https://github.com/RZLNB" target="_blank">RZLNB</a></p>
+            </div>
         </nav>
 
         <!-- 右侧内容区 -->
