--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             </div>
 
             <div class="copyright">
-                <p>© 2025 <a href="https://github.com/RZLNB/menav" target="_blank">MeNav</a></p>
-                <p>by <a href="https://github.com/RZLNB" target="_blank">RZLNB</a></p>
+                <p>© 2025 <a href="https://github.com/rbetree/menav" target="_blank">MeNav</a></p>
+                <p>by <a href="https://github.com/rbetree" target="_blank">rbetree</a></p>
             </div>
         </nav>
 
